--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5c25b9e2",
    "metadata": {},
    "outputs": [
@@ -58,10 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "bfb904b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\aurakcyber4\\job-skills-dashboard\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacy.matcher import PhraseMatcher\n",
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7517090c",
    "metadata": {},
    "outputs": [],
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "11e6038a",
    "metadata": {},
    "outputs": [
@@ -117,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skills found: {'digital media', 'research methodologies', 'critical thinking'}\n"
+      "Skills found: {'multimedia practices', 'research methodologies', 'analytical abilities', 'communication theory', 'critical thinking', 'communication technology'}\n"
      ]
     }
    ],
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "4a0c9533",
    "metadata": {},
    "outputs": [
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "b6f637a3",
    "metadata": {},
    "outputs": [
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "9923e779",
    "metadata": {},
    "outputs": [
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "255073f0",
    "metadata": {},
    "outputs": [],
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "ea0f799c",
    "metadata": {},
    "outputs": [],
@@ -295,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "e11628a8",
    "metadata": {},
    "outputs": [
@@ -303,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final extracted skills: {'interactive multimedia', 'critical thinking', 'multimedia storytelling', 'visual storytelling', 'public relations writing', 'broadcast journalism', 'research methodologies', 'news reporting', 'digital media'}\n"
+      "Final extracted skills: {'research methodologies', 'visual storytelling', 'multimedia storytelling', 'digital media', 'interactive multimedia', 'broadcast journalism', 'public relations writing', 'critical thinking', 'news reporting'}\n"
      ]
     }
    ],
@@ -331,23 +340,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "5af5f5c0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nication; and 2. Apply latest trends in multimedia practices and uses for professional dig\n",
+      "dcast Journalism 3 COMM 423 Interactive Multimedia 3 80 | P a g e Catalog 2024-2025 COMM 4\n",
+      "24 Capstone: Multimedia Storytelling 3 Concentration in Public \n",
+      "and Public Opinion 3 COMM 424 Capstone: Multimedia Storytelling 3 COMM 423 Interactive Mul\n"
+     ]
     }
    ],
    "source": [
-    "\"news reporting\" in catalog_text.lower()  # should be True if it’s there"
+    "import re\n",
+    "snippet_pattern = re.compile(r\".{0,40}multimedia.{0,40}\", re.IGNORECASE)\n",
+    "for m in snippet_pattern.finditer(catalog_text):\n",
+    "    print(m.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "42175d78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final extracted skills: {'research methodologies', 'visual storytelling', 'multimedia storytelling', 'digital media', 'interactive multimedia', 'broadcast journalism', 'critical thinking', 'news reporting'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 1) Replace all whitespace (tabs/newlines/multiple spaces) with single space\n",
+    "text = re.sub(r\"\\s+\", \" \", catalog_text)\n",
+    "\n",
+    "# 2) Replace hyphens between letters with a space\n",
+    "text = re.sub(r\"(?i)([a-z])-([a-z])\", r\"\\1 \\2\", text)  # handles non-ASCII hyphens\n",
+    "text = re.sub(r\"(?i)([a-z])\\-([a-z])\", r\"\\1 \\2\", text)  # handles ASCII hyphens\n",
+    "\n",
+    "from spacy.matcher import PhraseMatcher\n",
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "matcher = PhraseMatcher(nlp.vocab, attr=\"LOWER\")\n",
+    "\n",
+    "# Your curated skill list (all lower-case):\n",
+    "skill_terms = [\n",
+    "  \"news reporting\", \"broadcast journalism\", \"multimedia storytelling\", \n",
+    "  \"visual storytelling\", \"media ethics\", \"critical thinking\", \n",
+    "  \"research methodologies\", \"digital media\", \"interactive multimedia\"\n",
+    "]\n",
+    "patterns = [nlp.make_doc(term) for term in skill_terms]\n",
+    "matcher.add(\"SKILLS\", patterns)\n",
+    "\n",
+    "\n",
+    "# assume `nlp` is already loaded and `skill_terms` contains your full updated list\n",
+    "\n",
+    "# 1) Remove the old SKILLS entry\n",
+    "matcher.remove(\"SKILLS\")\n",
+    "\n",
+    "# 2) Re-build your patterns\n",
+    "patterns = [nlp.make_doc(t) for t in skill_terms]\n",
+    "\n",
+    "# 3) Add them back under the same label\n",
+    "matcher.add(\"SKILLS\", patterns)\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "found = {doc[start:end].text.lower() for _, start, end in matcher(doc)}\n",
+    "\n",
+    "\n",
+    "print(\"Final extracted skills:\", found)"
    ]
   }
  ],
